fixed header title spacing

--- a/components/navBar.module.css
+++ b/components/navBar.module.css
@@ -16,7 +16,7 @@
   color: white;
 }
 .title {
-  width: 5vw;
+  width: 18vw;
   cursor: pointer;
 }
 
